# WaveguideModeSolver

./: .cproject  .gitignore  .project  CMake.vars  CMakeLists.txt  INSTALL
CMakeMacros/: FindARPACK.cmake  FindHERMES.cmake  FindHERMES.cmake~  FindHERMES_COMMON.cmake~  FindMKL.cmake  FindMKL.cmake~  FindUMFPACK.cmake
Meshes/: 2mat.mesh  CircularWaveguide.mesh  MimWaveguidePml.mesh  OpenFiber.mesh  OpenFiber2.mesh  OpenFiberPml.mesh  PhotonicMHIDWaveguideAclPml.mesh  PhotonicMHIDWaveguideAclPml2.mesh  PhotonicMHIDWaveguideAclPml2.mesh~  PhotonicMHIDWaveguidePml.mesh  PhotonicWaveguidePml.mesh  PhotonicWaveguidePml2.mesh  PhotonicWaveguidePml2.mesh~  RidgeWaveguide.mesh  rectangle.mesh
Source/: CMakeLists.txt  ClockTickCounter.cpp  ClockTickCounter.h  WaveguideDefinitionsFields2.h  WaveguideMode.cpp  WaveguideMode.h  WaveguideModeSolverOverlap.cpp
Source/Eigensolver/: Arpack.h  ArpackEigensolver.h  ArpackWrapper.h  IterativeEigensolver.h  SparseEigensolver.h
